Add "force transparent" mode

--- a/features/ui-pwa-impl/src/jsMain/resources/index.html
+++ b/features/ui-pwa-impl/src/jsMain/resources/index.html
@@ -34,7 +34,7 @@
 
     </script>
 </head>
-<body bpe-build="112">
+<body bpe-build="169">
 <div class="loading js-loading"></div>
 <div class="container hidden js-container">
     <div class="drawing js-drawing">
@@ -44,27 +44,45 @@
     <div class="panel panel--palette">
         <div class="panel__pane">
             <div class="tool js-palette-color" bpe-title="palette_select_color">
-                <div class="tool__color js-palette-color-indicator"></div>
+                <div class="tool__color js-palette-color-indicator">
+                    <img src="drawable/light__transparent.svg" alt="" class="tool__indicator tool__indicator--transparent"/>
+                    <img src="drawable/light__force_transparent.svg" alt="" class="tool__indicator tool__indicator--force_transparent"/>
+                </div>
                 <img src="drawable/palette__color.svg" alt="" class="tool__icon"/>
             </div>
             <div class="tool js-palette-paper" bpe-title="palette_select_paper">
-                <div class="tool__color_paper js-palette-paper-indicator"></div>
+                <div class="tool__color_paper js-palette-paper-indicator">
+                    <img src="drawable/light__transparent.svg" alt="" class="tool__indicator tool__indicator--transparent"/>
+                    <img src="drawable/light__force_transparent.svg" alt="" class="tool__indicator tool__indicator--force_transparent"/>
+                </div>
                 <img src="drawable/palette__paper.svg" alt="" class="tool__icon"/>
             </div>
             <div class="tool js-palette-ink" bpe-title="palette_select_ink">
-                <div class="tool__color_ink js-palette-ink-indicator"></div>
+                <div class="tool__color_ink js-palette-ink-indicator">
+                    <img src="drawable/light__transparent.svg" alt="" class="tool__indicator tool__indicator--transparent"/>
+                    <img src="drawable/light__force_transparent.svg" alt="" class="tool__indicator tool__indicator--force_transparent"/>
+                </div>
                 <img src="drawable/palette__ink.svg" alt="" class="tool__icon"/>
             </div>
-            <div class="tool js-palette-bright" bpe-title="palette_select_bright">
-                <div class="tool__light js-palette-bright-indicator"></div>
+            <div class="tool tool__light js-palette-bright" bpe-title="palette_select_bright">
+                <img src="drawable/light__on.svg" alt="" class="tool__icon tool__icon--light tool__icon--light__on"/>
+                <img src="drawable/light__off.svg" alt="" class="tool__icon tool__icon--light tool__icon--light__off"/>
+                <img src="drawable/light__transparent.svg" alt="" class="tool__icon tool__icon--light tool__icon--light__transparent"/>
+                <img src="drawable/light__force_transparent.svg" alt="" class="tool__icon tool__icon--light tool__icon--light__force_transparent"/>
                 <img src="drawable/palette__bright.svg" alt="" class="tool__icon"/>
             </div>
-            <div class="tool js-palette-flash" bpe-title="palette_select_flash">
-                <div class="tool__light js-palette-flash-indicator"></div>
+            <div class="tool tool__light js-palette-flash" bpe-title="palette_select_flash">
+                <img src="drawable/light__on.svg" alt="" class="tool__icon tool__icon--light tool__icon--light__on"/>
+                <img src="drawable/light__off.svg" alt="" class="tool__icon tool__icon--light tool__icon--light__off"/>
+                <img src="drawable/light__transparent.svg" alt="" class="tool__icon tool__icon--light tool__icon--light__transparent"/>
+                <img src="drawable/light__force_transparent.svg" alt="" class="tool__icon tool__icon--light tool__icon--light__force_transparent"/>
                 <img src="drawable/palette__flash.svg" alt="" class="tool__icon"/>
             </div>
             <div class="tool js-palette-char" bpe-title="palette_select_character">
-                <div class="tool__char js-palette-char-indicator"></div>
+                <div class="tool__char js-palette-char-indicator">
+                    <img src="drawable/light__transparent.svg" alt="" class="tool__indicator tool__indicator--transparent"/>
+                    <img src="drawable/light__force_transparent.svg" alt="" class="tool__indicator tool__indicator--force_transparent"/>
+                </div>
                 <img src="drawable/palette__char.svg" alt="" class="tool"/>
             </div>
         </div>
