Tune pinch-zoom. Add build to the menu.

--- a/features/ui-pwa-impl/src/jsMain/resources/index.html
+++ b/features/ui-pwa-impl/src/jsMain/resources/index.html
@@ -34,7 +34,7 @@
 
     </script>
 </head>
-<body bpe-build="297">
+<body bpe-build="307">
 <div class="loading js-loading"></div>
 <div class="container hidden js-container">
     <div class="drawing js-drawing">
@@ -244,23 +244,26 @@
     </div>
     <div class="subpanel subpanel--menu js-menu-panel">
         <div class="menu__item js-menu-new">
-            <div class="menu__item-content" bpe-text="menu_new"></div>
+            <div class="menu__item-link" bpe-text="menu_new"></div>
         </div>
         <div class="menu__item">
-            <div class="menu__item-content" bpe-text="menu_load"></div>
+            <div class="menu__item-link" bpe-text="menu_load"></div>
             <input type="file" class="menu__item-load js-menu-load" accept=".bpe"/>
         </div>
         <div class="menu__item js-menu-save">
-            <div class="menu__item-content" bpe-text="menu_save"></div>
+            <div class="menu__item-link" bpe-text="menu_save"></div>
         </div>
         <div class="menu__item js-menu-export-tap">
-            <div class="menu__item-content" bpe-text="menu_export_tap"></div>
+            <div class="menu__item-link" bpe-text="menu_export_tap"></div>
         </div>
         <div class="menu__item js-menu-export-scr">
-            <div class="menu__item-content" bpe-text="menu_export_scr"></div>
+            <div class="menu__item-link" bpe-text="menu_export_scr"></div>
         </div>
         <div class="menu__item js-menu-export-png">
-            <div class="menu__item-content" bpe-text="menu_export_png"></div>
+            <div class="menu__item-link" bpe-text="menu_export_png"></div>
+        </div>
+        <div class="menu__item">
+            <div class="menu__item-text js-menu-build"></div>
         </div>
     </div>
     <div class="dialog js-dialog hidden">
