Export to .tap added

--- a/features/ui-pwa-impl/src/jsMain/resources/index.html
+++ b/features/ui-pwa-impl/src/jsMain/resources/index.html
@@ -34,7 +34,7 @@
 
     </script>
 </head>
-<body bpe-build="309">
+<body bpe-build="320">
 <div class="loading js-loading"></div>
 <div class="container hidden js-container">
     <div class="drawing js-drawing">
@@ -50,14 +50,14 @@
                 </div>
                 <img src="drawable/palette__color.svg" alt="" class="tool__icon"/>
             </div>
-            <div class="tool js-palette-paper" bpe-title="palette_select_paper">
+            <div class="tool js-palette-paper">
                 <div class="tool__color_paper js-palette-paper-indicator">
                     <img src="drawable/light__transparent.svg" alt="" class="tool__indicator tool__indicator--transparent"/>
                     <img src="drawable/light__force_transparent.svg" alt="" class="tool__indicator tool__indicator--force_transparent"/>
                 </div>
                 <img src="drawable/palette__paper.svg" alt="" class="tool__icon"/>
             </div>
-            <div class="tool js-palette-ink" bpe-title="palette_select_ink">
+            <div class="tool js-palette-ink">
                 <div class="tool__color_ink js-palette-ink-indicator">
                     <img src="drawable/light__transparent.svg" alt="" class="tool__indicator tool__indicator--transparent"/>
                     <img src="drawable/light__force_transparent.svg" alt="" class="tool__indicator tool__indicator--force_transparent"/>
