README updated with user manual.

--- a/features/ui-pwa-impl/src/jsMain/resources/index.html
+++ b/features/ui-pwa-impl/src/jsMain/resources/index.html
@@ -34,7 +34,7 @@
 
     </script>
 </head>
-<body bpe-build="320">
+<body bpe-build="322">
 <div class="loading js-loading"></div>
 <div class="container hidden js-container">
     <div class="drawing js-drawing">
@@ -144,10 +144,10 @@
     <div class="subpanel subpanel--palette js-erase-panel">
         <div class="panel__pane">
             <div class="tool tool--md js-erase-off">
-                <img class="tool__icon tool__icon--light" src="drawable/light__transparent.svg" alt="" />
+                <img class="tool__icon tool__icon--light" src="drawable/light__transparent.svg" alt=""/>
             </div>
             <div class="tool tool--md js-erase-on">
-                <img class="tool__icon tool__icon--light" src="drawable/light__force_transparent.svg" alt="" />
+                <img class="tool__icon tool__icon--light" src="drawable/light__force_transparent.svg" alt=""/>
             </div>
         </div>
     </div>
@@ -261,6 +261,9 @@
         </div>
         <div class="menu__item js-menu-export-png">
             <div class="menu__item-link" bpe-text="menu_export_png"></div>
+        </div>
+        <div class="menu__item">
+            <a class="menu__item-link" href="https://sourcecraft.dev/viachaslau-tratsiak/zx-bpe/browse/README.md" target="_blank" bpe-text="menu_manual"></a>
         </div>
         <div class="menu__item">
             <div class="menu__item-text js-menu-build"></div>
